# chess-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  llms.txt  pyproject.toml  sr.yaml  teasr.toml
.github/workflows/: ci.yml  release.yml
skills/chess-cli/: SKILL.md
src/chess_cli/: __main__.py  app.py  app.tcss
src/chess_cli/screens/: game.py
src/chess_cli/widgets/: board.py  command_input.py  move_log.py  square.py
src/chess_core/engine/: evaluation.py  minimax.py
src/chess_core/models/: __init__.py  enums.py  game.py  move.py  piece.py
src/chess_core/rules/: board_ops.py  check.py  constants.py  movement.py
tests/: test_board_ops.py  test_check.py  test_evaluation.py  test_minimax.py  test_models.py  test_movement.py
